# template

./: .pre-commit-config.yaml  main.py  pyproject.toml
logs/: log.txt
src/: __init__.py  logger.py  template.py
